--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
 name: adf
 
 on:
+  workflow_dispatch:
+
   push:
     branches: ["main"]
   pull_request:
@@ -72,8 +74,10 @@ jobs:
             -ArmTemplate ./adf_publish/ARMTemplateForFactory.json `
             -ArmTemplateParameters ./deploy/parameters/parameters-prod.json `
             -ResourceGroupName $rg `
-            -ExplicitStopTriggerList "eventtrigger" `
-            -DataFactoryName $adfname -predeployment $true -deleteDeployment $false
+            -ExplicitStopTriggerList "eventtrigger" "testtrigger" `
+            -DataFactoryName $adfname `
+            -predeployment $true `
+            -deleteDeployment $false
 
 
           az stack group create `
@@ -90,4 +94,6 @@ jobs:
             -ArmTemplate ./adf_publish/ARMTemplateForFactory.json `
             -ArmTemplateParameters ./deploy/parameters/parameters-prod.json `
             -ResourceGroupName $rg `
-            -DataFactoryName $adfname -predeployment $false -deleteDeployment $false
+            -DataFactoryName $adfname `
+            -predeployment $false `
+            -deleteDeployment $false
