--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,7 +74,7 @@ jobs:
             -ArmTemplate ./adf_publish/ARMTemplateForFactory.json `
             -ArmTemplateParameters ./deploy/parameters/parameters-prod.json `
             -ResourceGroupName $rg `
-            -ExplicitStopTriggerList "eventtrigger" "testtrigger" `
+            -ExplicitStopTriggerList "eventtrigger, testtrigger" `
             -DataFactoryName $adfname `
             -predeployment $true `
             -deleteDeployment $false
